// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroRoles Component should match the snapshot 1`] = `
<div
  className="HeroRolesList card flex flex-column"
>
  <div
    className="header flex justify-between"
  >
    <h3>
      tank
    </h3>
    <img
      alt="tank icon"
      className="role-icon"
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
  <div
    className="body flex flex-column"
  >
    <div
      className="sub-title empty-list-message flex justify-center"
    >
      <div>
        No players online
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroRoles Component should match the snapshot 2`] = `
<div
  className="HeroRolesList card flex flex-column"
>
  <div
    className="header flex justify-between"
  >
    <h3>
      offensive
    </h3>
    <img
      alt="offensive icon"
      className="role-icon"
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </div>
  <div
    className="body flex flex-column"
  >
    <div
      className="HeroCard flex align-center"
    >
      <div
        className="invitePlayerButton"
      >
        <img
          alt="soldier76 icon"
          className="HeroImage"
          onClick={undefined}
          src={
            Object {
              "process": [Function],
            }
          }
        />
        <div
          className="overlay invitable"
        >
          <div
            className="plus-container flex align-center justify-center"
            onClick={[Function]}
          >
            <i
              className="fa fa-plus"
            />
          </div>
        </div>
      </div>
      <div
        className="content flex flex-column"
      >
        <div
          className="display-name"
        >
          PwNShoPP#1662
        </div>
        <div
          className="sub-title"
        >
          <span>
            2400
             SR
          </span>
          <span>
             | 
          </span>
          <span>
            61.1
            % WR
          </span>
        </div>
      </div>
      <div
        className="button-primary"
        onClick={[Function]}
      >
        <div
          className="button-content"
        >
          stats
        </div>
      </div>
    </div>
  </div>
</div>
`;
